--- a/01-html-css-bootstrap/wwwroot/02-css/02-style-in-document/03-style-class.html
+++ b/01-html-css-bootstrap/wwwroot/02-css/02-style-in-document/03-style-class.html
@@ -17,9 +17,9 @@
             color: rgb(170, 84, 141);
         }
         
-        .impotrant {
+        .important {
             color: black;
-            background-color: red;
+            background-color: yellow;
         }
     </style>
 </head>
@@ -31,12 +31,12 @@
 <p>
     This is the second paragraph.
 </p>
-<p class="impotrant">
+<p class="important">
     This is the third paragraph.
 </p>
 
-<h2 class="impotrant">This is subsection heading</h2>
-<p>
+<h2>This is subsection heading</h2>
+<p class="important">
     This is the fourth paragraph.
 </p>
 <p>
