--- a/01-html-css-bootstrap/wwwroot/01-html/06-forms/04-form-text-area.html
+++ b/01-html-css-bootstrap/wwwroot/01-html/06-forms/04-form-text-area.html
@@ -8,7 +8,7 @@
 
 <body>
 
-    <form action="action_page.php">
+    <form action="action_page.php" method="post">
         <textarea name="message" rows="10" cols="30">The cat was playing in the garden.</textarea>
         <br />
         <input type="submit" value="Process" />
