--- a/01-html-css-bootstrap/wwwroot/02-css/01-style-in-element/01-elem-style-color.html
+++ b/01-html-css-bootstrap/wwwroot/02-css/01-style-in-element/01-elem-style-color.html
@@ -9,8 +9,8 @@
 
     <h2>I have no style attribut applied to me</h2>
     <h2 style="color:red">I am red</h2>
-    <h2 style="color:blue">I am blue as a sky</h2>
-    <h2 style="color:#FF38FF">I am pink</h2>
+    <h2 style="color:blue;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">I am blue as a skyyyyyyyyyyyy</h2>
+    <h2 style="color:#F238FF;font-family: fantasy;">I am pink</h2>
     <h2 style="color:#16C947">I am a kind of green, like grass</h2>
     <h2>I also have no style attribut applied to me</h2>
 
