--- a/01-html-css-bootstrap/wwwroot/02-css/01-style-in-element/05-elem-style-ul.html
+++ b/01-html-css-bootstrap/wwwroot/02-css/01-style-in-element/05-elem-style-ul.html
@@ -29,7 +29,7 @@
 
     <h2>Unordered list with disk bulits</h2>
 
-    <ul style="list-style-type:disc">
+    <ul style="list-style-type:disc;color: lightgreen;">
         <li>Coffie</li>
         <li>Tea</li>
         <li>Milk</li>
