--- a/01-html-css-bootstrap/wwwroot/02-css/02-style-in-document/07-styles-text-tag.html
+++ b/01-html-css-bootstrap/wwwroot/02-css/02-style-in-document/07-styles-text-tag.html
@@ -19,7 +19,7 @@
             font-size: 20px;
         }
         
-        .suffux {
+        .suffix {
             font-size: 2em;
         }
         
@@ -41,7 +41,7 @@
     <p><strong>Important:</strong> Styling of the
         <mickey> text </mickey> should be accomplished with CSS.
     </p>
-    <p class='sufix'>Both absolute and realtive units can be used for the text styling.</p>
+    <p class='suffix'>Both absolute and realtive units can be used for the text styling.</p>
 </body>
 
 </html>
